# findthebug

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  bug.cpp  bug.hpp  container.cpp  container.hpp  fileutil.cpp  fileutil.hpp  landscape.cpp  landscape.hpp  main.cpp
tests/: CMakeLists.txt  bug_test.cpp  container_test.cpp  landscape_test.cpp
tests/res/: CMakeLists.txt  bug_first_line_blank.txt  bug_other.txt  landscape_bug_other.txt  landscape_close.txt  landscape_corners.txt  landscape_overlapped.txt
